--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <section class="logo">
-            <img src="alura.png" alt="Imagem da letra A da Alura">
+            <a href="index.html"><img src="alura.png" alt="Imagem da letra A da Alura"></a>
         </section>
         
         <section class="principal">
@@ -33,7 +33,7 @@
             </div>
             
             <div id="mostrar">
-                <textarea id="criptografado"></textarea>
+                <div id="criptografado"></div>
                 <button id="copiar">Copiar</button>
             </div>
         </section>
